<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <LinearLayout
       android:id="@+id/linearLayout"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent">

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/level"
             android:layout_marginVertical="10dp"
             />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:gravity="center"
          android:weightSum="12"
           >

         <Spinner
             android:id="@+id/level"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="9"
             android:spinnerMode="dropdown"
             android:background="@drawable/dropdown_rounded"
             tools:ignore="SpeakableTextPresentCheck,Suspicious0dp" />
      </LinearLayout>
      <LinearLayout
          android:id="@+id/container_won"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:orientation="horizontal"
          android:layout_marginVertical="5dp"
          android:visibility="gone"
          android:gravity="center"
          >
         <TextView
             android:id="@+id/tv_win"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/game_won"
             android:layout_gravity="center"
             />

      </LinearLayout>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:gravity="center"
          android:layout_marginVertical="20dp"
          >

         <TextView
             android:id="@+id/tv_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
         <TextView
             android:id="@+id/restart_level"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/start"
             android:textColor="@color/purple_700"
             android:layout_marginStart="15dp"
            />

      </LinearLayout>
      <LinearLayout
          android:id="@+id/match_container"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:gravity="center"
          android:layout_marginVertical="5dp"
          android:visibility="gone"
          >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/matches"
            />
         <TextView
             android:id="@+id/matches_counter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/zerostring"
        />
      </LinearLayout>
      <ListView
          android:id="@+id/game_board"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_gravity="bottom"
          android:divider="@color/transparent"
          android:dividerHeight="3dp"
          />


   </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>